# controller/controller.go
@@ -177,7 +177,7 @@ func (ctrl *Controller) SetupRouter(
 		// files.HEAD("/:id", ctrl.GetFileInformation)
 		files.PUT("/:id", ctrl.ReplaceFileGin)
 		files.DELETE("/:id", ctrl.DeleteFileGin)
-		files.GET("/:id/presignedurl", ctrl.GetFilePresignedURL)
+		// files.GET("/:id/presignedurl", ctrl.GetFilePresignedURLGin)
 		// files.GET("/:id/presignedurl/content", ctrl.GetFileWithPresignedURL)
 	}
 
